@@ -61,7 +61,7 @@ elseif (isset($_COOKIE['dc_admin']) && strlen($_COOKIE['dc_admin']) == 104)
 {
 	# If we have a remember cookie, go through auth process with user_key
 	$user_id = substr($_COOKIE['dc_admin'],40);
-	$user_id = @unpack('a32',@pack('H*',$user_id));
+	$user_id = trim(@unpack('a32',@pack('H*',$user_id)));
 	if (is_array($user_id))
 	{
 		$user_id = $user_id[1];
@@ -148,7 +148,7 @@ elseif ($change_pwd)
 		if (isset($data['cookie_admin']) && strlen($data['cookie_admin']) == 104)
 		{
 			$user_id = substr($data['cookie_admin'],40);
-			$user_id = @unpack('a32',@pack('H*',$user_id));
+			$user_id = trim(@unpack('a32',@pack('H*',$user_id)));
 			if (is_array($user_id))
 			{
 				$user_id = $data['user_id'];
